fix issue profile feature
