# models/profile_model.go
@@ -5,11 +5,10 @@ import (
 )
 
 type Profile struct {
-	ID        uint      `json:"id" gorm:"primary_key"`
-	UserID    uint      `json:"user_id" gorm:"not null;unique"`
-	Fullname  string    `json:"fullname" gorm:"size:255"`
-	Bio       string    `json:"bio" gorm:"type:text"`
+	ID        uint      `gorm:"primaryKey" json:"id"`
+	UserID    uint      `json:"user_id"`
+	Fullname  string    `json:"fullname"`
+	Bio       string    `json:"bio"`
 	CreatedAt time.Time `json:"created_at"`
 	UpdatedAt time.Time `json:"updated_at"`
-	User      User      `json:"-" gorm:"foreignKey:UserID"`
 }
